--- a/views/index.ejs
+++ b/views/index.ejs
@@ -49,7 +49,7 @@
             <ul class="nav navbar-nav navbar-right">
                 <% if(!login){  %>
                     <li><a href="/regist">注册</a></li>
-                    <li><a href="#">登录</a></li>
+                    <li><a href="/login">登录</a></li>
                 <% }else{  %>
                     <li><a href="#">欢迎<%= username %></a></li>
                     <li><a href="#">设置个人信息</a></li>
