--- a/views/index.ejs
+++ b/views/index.ejs
@@ -27,38 +27,7 @@
 
   <body>
 
-    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">班级说说</a>
-        </div>
-
-   
-
-          <div id="navbar" class="navbar-collapse collapse">
-            <ul class="nav navbar-nav">
-                <li class="active"><a href="#">全部说说</a></li>
-                <li><a href="#">我的说说</a></li>
-            </ul>  
-            <ul class="nav navbar-nav navbar-right">
-                <% if(!login){  %>
-                    <li><a href="/regist">注册</a></li>
-                    <li><a href="/login">登录</a></li>
-                <% }else{  %>
-                    <li><a href="#">欢迎<%= username %></a></li>
-                    <li><a href="#">设置个人信息</a></li>
-                <% } %>
-            </ul>
-         </div>
-        
-      </div>
-    </nav>
+    <%- include("./header.ejs",{"active":"全部说说"}) %>
 
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
