--- a/views/header.ejs
+++ b/views/header.ejs
@@ -23,6 +23,11 @@
                         class = "active"
                     <%}%>
                 ><a href="#">我的说说</a></li>
+
+                <li <% if(active == "成员列表"){%>
+                        class = "active"
+                    <%}%>
+                ><a href="#">成员列表</a></li>
             </ul>  
             <ul class="nav navbar-nav navbar-right">
                 <% if(!login){  %>
