--- a/views/index.ejs
+++ b/views/index.ejs
@@ -32,33 +32,70 @@
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
       <div class="container">
-        <h1>Hello, world!
-               <% if(login){  %>
-                    <a href="/setavartar"><img src="/avartar/<%=avartar%>" alt=""></a>
-              <%}%>
-        </h1>
-        <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-        <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
+      
+        <% if(login != "1"){ %>
+            <div class="row">
+              <div class="col-lg-6">
+                <h2>班级说说</h2>
+                <p>班级说说，是同学们交流的平台与园地</p>
+                <p><a class="btn btn-primary btn-lg" href="/regist" role="button">login &raquo;</a></p>
+              </div>
+
+              
+               <form role="form" class="col-md-6">
+                  <h2>欢迎登陆</h2>                
+                  <div class="form-group">
+                      <label for="username">用户名</label>
+                      <input type="text" class="form-control" id="username" placeholder="用户名，且用户名不可以重复">
+                  </div>
+                  
+                  <div class="form-group">
+                      <label for="mima">Password</label>
+                      <input type="password" class="form-control" id="password" placeholder="密码至少六位">
+                  </div>
+                
+                  <div class="checkbox">
+                      <label>
+                          <input type="checkbox"> 记住密码
+                      </label>
+                  </div>
+                  <button type="button" class="btn btn-default" id="login">登陆</button>
+
+                
+                  <div class="row" id="failed"> </div>
+                
+              </form>
+          </div>
+              
+
+
+        <%}else{%>
+            
+            <div class="row">
+              <div class="col-md-2 col-md-offset-1">
+                  <p><a href="/setavartar"><img src="/avartar/<%=avartar%>" alt=""></a></p>
+                  <h2><%=username%></h2>
+              </div>
+              <div class="col-md-7 col-md-offset-1">
+                <textarea name="content" id="content" cols="80" rows="10"></textarea>
+                <p><button type="button" id="fabiao" class="btn btn-success btn-sm">发表说说</button></p>
+              </div>
+            </div>  
+        <%}%>
+        
       </div>
     </div>
 
     <div class="container">
       <!-- Example row of columns -->
-      <div class="row">
-        <div class="col-md-4">
-          <h2>Heading</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-        </div>
-        <div class="col-md-4">
-          <h2>Heading</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-       </div>
-        <div class="col-md-4">
-          <h2>Heading</h2>
-          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+        <div class="row">
+        <%for(var i=0;i<result.length;i++){%>
+            <div class="col-md-4">
+              <h2><img width="50px" src="/avartar/<%=result[i].username%>.jpg"><%=result[i].username%></h2>
+              <p><%=result[i].content%></p>
+              <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+            </div>
+        <%}%>
         </div>
       </div>
 
@@ -70,10 +107,49 @@
     </div> <!-- /container -->
 
 
+
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
+
+    <script type="text/template" id="moban">
+        <div class="alert alert-danger " role="alert">
+            <a href="#" class="alert-link">{{= alert_desc }}</a>
+        </div>
+    </script> 
     <script src="/js/jquery-3.1.1.js" tppabs="http://cdn.bootcss.com/jquery/1.11.1/jquery.min.js"></script>
     <script src="/js/bootstrap.min.js" tppabs="http://v3.bootcss.com/dist/js/bootstrap.min.js"></script>
+    <script src="/js/underscore.js"></script>
+
+    <script type="text/javascript">
+    
+        $("input").focus(function(){
+             $("#failed").html("");
+         })
+         $("#login").click(function(){
+             $.post("/login",{"username":$("#username").val(),"password":$("#password").val()},function(result){
+                console.log(result.result);
+                var compiled = _.template($("#moban").html());
+                if (result.result == "-1"){
+                    var html = compiled({"alert_desc":"用户名不存在"});
+                    $("#failed").append($(html));
+                    return;
+                }else if(result.result == "-2"){
+                    var html = compiled({"alert_desc":"用户名密码错误"});
+                    $("#failed").append($(html));
+                    return;
+                }
+                window.location = "/";
+             })
+         })
+         $("#fabiao").click(function(){
+           $.post("/doshuoshuo",{"content":$("#content").val()},function(result){
+              // console.log(result);
+              if(result=="1"){
+                window.location = "/";
+              }
+           })
+         })
+    </script>
   </body>
 </html>
