--- a/views/header.ejs
+++ b/views/header.ejs
@@ -19,12 +19,13 @@
                     <%}%>
                 ><a href="#">全部说说</a></li>
 
-                <% if(!login){  %>
+                <% if(login){  %>
                     <li <% if(active == "我的说说"){%>
                             class = "active"
                         <%}%>
-                    ><a href="#">我的说说</a></li>
+                    ><a href="/user/<%=username%>">我的说说</a></li>
                 <%}%>
+
                 <li <% if(active == "成员列表"){%>
                         class = "active"
                     <%}%>
