--- a/views/header.ejs
+++ b/views/header.ejs
@@ -17,7 +17,7 @@
                 <li <% if(active == "全部说说"){%>
                         class = "active"
                     <%}%>
-                ><a href="#">全部说说</a></li>
+                ><a href="/">全部说说</a></li>
 
                 <% if(login){  %>
                     <li <% if(active == "我的说说"){%>
@@ -29,7 +29,7 @@
                 <li <% if(active == "成员列表"){%>
                         class = "active"
                     <%}%>
-                ><a href="#">成员列表</a></li>
+                ><a href="/userlist">成员列表</a></li>
             </ul>  
             <ul class="nav navbar-nav navbar-right">
                 <% if(!login){  %>
